available-version for even more tools

--- a/CBI/git-flow/Makefile
+++ b/CBI/git-flow/Makefile
@@ -5,11 +5,12 @@ include ../utils.mk
 ## SOFTWARE
 ## ----------------------------------------------------------
 TARBALL=$(VERSION).tar.gz
+GITHUB_REPO=https://github.com/petervanderdoes/gitflow-avh
 
 $(DOWNLOAD_TARGET):
 	mkdir -p $(BUILD_HOME); \
 	cd $(BUILD_HOME); \
-	curl -L -O https://github.com/petervanderdoes/gitflow-avh/archive/$(TARBALL); \
+	curl -L -O $(GITHUB_REPO)/archive/$(TARBALL); \
 	tar xvfz $(TARBALL)
 
 $(CONFIG_TARGET): $(DOWNLOAD_TARGET)
@@ -20,3 +21,6 @@ $(CONFIG_TARGET): $(DOWNLOAD_TARGET)
 
 $(BUILD_TARGET): $(CONFIG_TARGET)
 	touch $@
+
+available-version:
+	@curl --head --silent $(GITHUB_REPO)/releases/latest | grep -E "^location:" | sed -E 's/.*(v|\/)//'
