--- a/CBI/varscan/Makefile
+++ b/CBI/varscan/Makefile
@@ -2,7 +2,7 @@ include config.mk
 include ../utils.mk
 
 JARFILE=$(NAME).v$(VERSION).jar
-
+GITHUB_REPO=https://github.com/dkoboldt/varscan
 
 ## ----------------------------------------------------------
 ## SOFTWARE
@@ -10,7 +10,7 @@ JARFILE=$(NAME).v$(VERSION).jar
 $(DOWNLOAD_TARGET):
 	mkdir -p $(BUILD_PATH)
 	cd $(BUILD_PATH); \
-	curl -L -O https://github.com/dkoboldt/varscan/releases/download/$(VERSION)/$(JARFILE)
+	curl -L -O $(GITHUB_REPO)/releases/download/$(VERSION)/$(JARFILE)
 
 $(BUILD_TARGET):
 	cd $(BUILD_PATH); \
@@ -22,3 +22,6 @@ $(INSTALL_TARGET): $(DOWNLOAD_TARGET)
 	make post_install
 	ls -la $(PREFIX)
 	@echo "SOFTWARE INSTALLED TO: $(PREFIX)"
+
+available-version:
+	@curl --head --silent $(GITHUB_REPO)/releases/latest | grep -E "^location:" | sed -E 's/.*(v|\/)//'
