--- a/CBI/kallisto/Makefile
+++ b/CBI/kallisto/Makefile
@@ -2,6 +2,7 @@ include config.mk
 include ../utils.mk
 
 TARBALL=$(NAME)_linux-v$(VERSION).tar.gz
+GITHUB_REPO=https://github.com/pachterlab/kallisto
 
 ## ----------------------------------------------------------
 ## SOFTWARE
@@ -9,7 +10,7 @@ TARBALL=$(NAME)_linux-v$(VERSION).tar.gz
 $(DOWNLOAD_TARGET):
 	mkdir -p $(BUILD_HOME); \
 	cd $(BUILD_HOME); \
-	curl -L -O https://github.com/pachterlab/kallisto/releases/download/v$(VERSION)/$(TARBALL); \
+	curl -L -O $(GITHUB_REPO)/releases/download/v$(VERSION)/$(TARBALL); \
 	tar zxf $(TARBALL); \
 	mv $(NAME) $(NAME)-$(VERSION)                   # 0.46.0
 #	mv $(NAME)_linux-v$(VERSION) $(NAME)-$(VERSION) # 0.45.x
@@ -20,3 +21,6 @@ $(INSTALL_TARGET): $(DOWNLOAD_TARGET)
 	make post_install
 	ls -la $(PREFIX)
 	@echo "SOFTWARE INSTALLED TO: $(PREFIX)"
+
+available-version:
+	@curl --head --silent $(GITHUB_REPO)/releases/latest | grep -E "^location:" | sed -E 's/.*(v|\/)//'
