--- a/CBI/ripgrep/Makefile
+++ b/CBI/ripgrep/Makefile
@@ -3,6 +3,7 @@ include ../utils.mk
 
 ARCH=x86_64-unknown-linux-musl
 TARBALL=$(NAME)-$(VERSION)-$(ARCH).tar.gz
+GITHUB_REPO=https://github.com/BurntSushi/ripgrep
 
 ## ----------------------------------------------------------
 ## SOFTWARE
@@ -10,7 +11,7 @@ TARBALL=$(NAME)-$(VERSION)-$(ARCH).tar.gz
 $(DOWNLOAD_TARGET):
 	mkdir -p $(BUILD_HOME); \
 	cd $(BUILD_HOME); \
-	curl -L -O https://github.com/BurntSushi/ripgrep/releases/download/$(VERSION)/$(TARBALL); \
+	curl -L -O $(GITHUB_REPO)/releases/download/$(VERSION)/$(TARBALL); \
 	tar -xzf $(TARBALL); \
 	mv $(NAME)-$(VERSION)-$(ARCH) $(NAME)-$(VERSION)
 
@@ -20,3 +21,6 @@ $(INSTALL_TARGET): $(DOWNLOAD_TARGET)
 	make post_install
 	ls -la $(PREFIX)
 	@echo "SOFTWARE INSTALLED TO: $(PREFIX)"
+
+available-version:
+	@curl --head --silent $(GITHUB_REPO)/releases/latest | grep -E "^location:" | sed -E 's/.*(v|\/)//'
