--- a/CBI/star/Makefile
+++ b/CBI/star/Makefile
@@ -2,6 +2,7 @@ include config.mk
 include ../utils.mk
 
 TARBALL=$(NAME)_linux-v$(VERSION).tar.gz
+GITHUB_REPO=https://github.com/alexdobin/STAR
 
 ## ----------------------------------------------------------
 ## SOFTWARE
@@ -9,7 +10,7 @@ TARBALL=$(NAME)_linux-v$(VERSION).tar.gz
 $(DOWNLOAD_TARGET):
 	mkdir -p $(BUILD_HOME); \
 	cd $(BUILD_HOME); \
-	curl -L -O https://github.com/alexdobin/STAR/archive/$(VERSION).zip; \
+	curl -L -O $(GITHUB_REPO)/archive/$(VERSION).zip; \
 	unzip $(VERSION).zip
 
 $(INSTALL_TARGET): $(DOWNLOAD_TARGET)
@@ -18,3 +19,6 @@ $(INSTALL_TARGET): $(DOWNLOAD_TARGET)
 	make post_install
 	ls -la $(PREFIX)
 	@echo "SOFTWARE INSTALLED TO: $(PREFIX)"
+
+available-version:
+	@curl --head --silent $(GITHUB_REPO)/releases/latest | grep -E "^location:" | sed -E 's/.*(v|\/)//'
