available-version harmonization

--- a/CBI/bats-core/Makefile
+++ b/CBI/bats-core/Makefile
@@ -2,6 +2,7 @@ include config.mk
 include ../utils.mk
 
 TARBALL=v$(VERSION).tar.gz
+GITHUB_REPO=https://github.com/bats-core/$(NAME)
 
 ## ----------------------------------------------------------
 ## SOFTWARE
@@ -9,7 +10,7 @@ TARBALL=v$(VERSION).tar.gz
 $(DOWNLOAD_TARGET):
 	mkdir -p $(BUILD_HOME); \
 	cd $(BUILD_HOME); \
-	curl -L -O https://github.com/bats-core/$(NAME)/archive/$(TARBALL); \
+	curl -L -O $(GITHUB_REPO)/archive/$(TARBALL); \
 	tar zxf $(TARBALL)
 
 $(INSTALL_TARGET): $(DOWNLOAD_TARGET)
@@ -19,4 +20,4 @@ $(INSTALL_TARGET): $(DOWNLOAD_TARGET)
 	@echo "SOFTWARE INSTALLED TO: $(PREFIX)"
 
 available-version:
-	@curl --silent https://raw.githubusercontent.com/bats-core/$(NAME)/master/package.json | grep -A 1 -E '"name": * "bats"' | grep -E '"version":' | sed -E 's/.*://' | sed -E 's/(^ *"|".*)//g'
+	@curl --head --silent $(GITHUB_REPO)/releases/latest | grep -E "^location:" | sed -E 's/.*(v|-|\/)//'
