--- a/CBI/blat/Makefile
+++ b/CBI/blat/Makefile
@@ -17,3 +17,6 @@ $(INSTALL_TARGET): $(DOWNLOAD_TARGET)
 	make post_install
 	ls -la $(PREFIX)
 	@echo "SOFTWARE INSTALLED TO: $(PREFIX)"
+
+available-version:
+	@curl --silent https://hgdownload.cse.ucsc.edu/admin/exe/linux.x86_64/blat/ | grep -E "blat.*BLAT[[:space:]]+v" | sed -E 's/blat.*BLAT[[:space:]]+v[^[:space:]]*[[:space:]]+([^[:space:]]+)[[:space:]]+.*/\1/g'
