--- a/CBI/bowtie2/Makefile
+++ b/CBI/bowtie2/Makefile
@@ -2,6 +2,7 @@ include config.mk
 include ../utils.mk
 
 TARBALL=$(NAME)-$(VERSION)-linux-x86_64.zip
+GITHUB_REPO=https://github.com/BenLangmead/bowtie2
 
 ## ----------------------------------------------------------
 ## SOFTWARE
@@ -9,7 +10,7 @@ TARBALL=$(NAME)-$(VERSION)-linux-x86_64.zip
 $(DOWNLOAD_TARGET):
 	mkdir -p $(BUILD_HOME); \
 	cd $(BUILD_HOME); \
-	curl -L -O https://github.com/BenLangmead/bowtie2/releases/download/v$(VERSION)/$(TARBALL); \
+	curl -L -O $(GITHUB_REPO)/releases/download/v$(VERSION)/$(TARBALL); \
 	unzip $(TARBALL); \
 	mv $(NAME)-$(VERSION)-linux-x86_64 $(NAME)-$(VERSION)
 
@@ -19,3 +20,6 @@ $(INSTALL_TARGET): $(DOWNLOAD_TARGET)
 	make post_install
 	ls -la $(PREFIX)
 	@echo "SOFTWARE INSTALLED TO: $(PREFIX)"
+
+available-version:
+	@curl --head --silent $(GITHUB_REPO)/releases/latest | grep -E "^location:" | sed -E 's/.*(v|\/)//'
