FIX 'make available-version' for many GitHub tools; needed to be case insensitive

--- a/CBI/fzf/Makefile
+++ b/CBI/fzf/Makefile
@@ -26,4 +26,4 @@ $(INSTALL_TARGET): $(BUILD_TARGET)
 	@echo "SOFTWARE INSTALLED TO: $(PREFIX)"
 
 available-version:
-	@curl --head --silent $(GITHUB_REPO)/releases/latest | grep -E "^location:" | sed -E 's/.*(v|\/)//'
+	@curl --head --silent $(GITHUB_REPO)/releases/latest | grep -i -E "^location:" | sed -E 's/.*(v|\/)//'
