--- a/CBI/gdal/Makefile
+++ b/CBI/gdal/Makefile
@@ -43,4 +43,4 @@ $(DOWNLOAD_TARGET):
 	tar xvfz $(TARBALL)
 
 available-version:
-	@curl --head --silent $(GITHUB_REPO)/releases/latest | grep -E "^location:" | sed -E 's/.*(v|\/)//'
+	@curl --head --silent $(GITHUB_REPO)/releases/latest | grep -i -E "^location:" | sed -E 's/.*(v|\/)//'
