--- a/CBI/git-flow/Makefile
+++ b/CBI/git-flow/Makefile
@@ -23,4 +23,4 @@ $(BUILD_TARGET): $(CONFIG_TARGET)
 	touch $@
 
 available-version:
-	@curl --head --silent $(GITHUB_REPO)/releases/latest | grep -E "^location:" | sed -E 's/.*(v|\/)//'
+	@curl --head --silent $(GITHUB_REPO)/releases/latest | grep -i -E "^location:" | sed -E 's/.*(v|\/)//'
