--- a/CBI/rclone/Makefile
+++ b/CBI/rclone/Makefile
@@ -27,4 +27,4 @@ post_install:
 	mv $(PREFIX)/*.1 $(PREFIX)/share/man/man1
 
 available-version:
-	@curl --head --silent $(GITHUB_REPO)/releases/latest | grep -E "^location:" | sed -E 's/.*(v|\/)//'
+	@curl --head --silent $(GITHUB_REPO)/releases/latest | grep -i -E "^location:" | sed -E 's/.*(v|\/)//'
