--- a/CBI/redis/Makefile
+++ b/CBI/redis/Makefile
@@ -37,4 +37,4 @@ $(INSTALL_TARGET): $(BUILD_TARGET)
 	make post_install
 
 available-version:
-	@curl --head --silent $(GITHUB_REPO)/releases/latest | grep -E "^location:" | sed -E 's/.*(v|\/)//'
+	@curl --head --silent $(GITHUB_REPO)/releases/latest | grep -i -E "^location:" | sed -E 's/.*(v|\/)//'
