--- a/CBI/tig/Makefile
+++ b/CBI/tig/Makefile
@@ -18,4 +18,4 @@ post_install:
 	make write_protect_module
 
 available-version:
-	@curl --head --silent $(GITHUB_REPO)/releases/latest | grep -E "^location:" | sed -E 's/.*(v|-|\/)//'
+	@curl --head --silent $(GITHUB_REPO)/releases/latest | grep -i -E "^location:" | sed -E 's/.*(v|-|\/)//'
