--- a/CBI/gistic2/Makefile
+++ b/CBI/gistic2/Makefile
@@ -39,4 +39,4 @@ post_install:
 
 
 available-version:
-	@curl --head --silent $(GITHUB_REPO)/releases/latest | grep -E "^location:" | sed -E 's/.*(v|\/)//'
+	@curl --head --silent $(GITHUB_REPO)/releases/latest | grep -i -E "^location:" | sed -E 's/.*(v|\/)//'
