--- a/CBI/port4me/Makefile
+++ b/CBI/port4me/Makefile
@@ -3,6 +3,7 @@ include ../utils.mk
 
 
 TARBALL=$(VERSION).tar.gz
+GITHUB_REPO=https://github.com/HenrikBengtsson/port4me
 
 ## ----------------------------------------------------------
 ## SOFTWARE
@@ -10,7 +11,7 @@ TARBALL=$(VERSION).tar.gz
 $(DOWNLOAD_TARGET):
 	mkdir -p $(BUILD_HOME)
 	cd $(BUILD_HOME); \
-	curl -L -O https://github.com/HenrikBengtsson/port4me/archive/refs/tags/$(TARBALL); \
+	curl -L -O $(GITHUB_REPO)/archive/refs/tags/$(TARBALL); \
 	tar xf "$(TARBALL)"
 
 $(INSTALL_TARGET): $(DOWNLOAD_TARGET)
@@ -19,3 +20,6 @@ $(INSTALL_TARGET): $(DOWNLOAD_TARGET)
 	make post_install
 	ls -la $(PREFIX)
 	@echo "SOFTWARE INSTALLED TO: $(PREFIX)"
+
+available-version:
+	@curl --silent $(GITHUB_REPO)/tags | pandoc --from=html --to=plain | grep -E "^[[:digit:]][.][[:digit:]][.][[:digit:]]$$" | head -1 | sed -E 's/[[:space:]]+$(NAME) //'
