rstudio-server-controller/0.13.0

--- a/CBI/rstudio-server-controller/Makefile
+++ b/CBI/rstudio-server-controller/Makefile
@@ -24,4 +24,4 @@ $(INSTALL_TARGET): $(DOWNLOAD_TARGET)
 	@echo "SOFTWARE INSTALLED TO: $(PREFIX)"
 
 available-version:
-	@curl --silent $(GITHUB_REPO)/tags | pandoc --from=html --to=plain | grep -E "^[[:digit:]][.][[:digit:]][.][[:digit:]]$$" | head -1 | sed -E 's/[[:space:]]+$(NAME) //'
+	@curl --silent $(GITHUB_REPO)/tags | pandoc --from=html --to=plain | grep -E "^[[:digit:]]+[.][[:digit:]]+[.][[:digit:]]+$$" | head -1 | sed -E 's/[[:space:]]+$(NAME) //'
