--- a/CBI/htslib/Makefile
+++ b/CBI/htslib/Makefile
@@ -6,6 +6,7 @@ include ../utils.mk
 
 
 TARBALL=$(NAME)-$(VERSION).tar.bz2
+GITHUB_REPO=https://github.com/samtools/samtools
 
 ## ----------------------------------------------------------
 ## SOFTWARE
@@ -13,5 +14,10 @@ TARBALL=$(NAME)-$(VERSION).tar.bz2
 $(DOWNLOAD_TARGET):
 	mkdir -p $(BUILD_HOME); \
 	cd $(BUILD_HOME); \
-	curl -L -O https://github.com/samtools/$(NAME)/releases/download/$(VERSION)/$(TARBALL); \
+	curl -L -O $(GITHUB_REPO)/releases/download/$(VERSION)/$(TARBALL); \
 	tar jxf $(TARBALL)
+
+available-version:
+	@curl --silent $(GITHUB_REPO)/develop/NEWS | grep -E "^Release [[:digit:]]" | head -1 | sed -E 's/(^Release *| .*)//g'
+
+
