--- a/CBI/mc/Makefile
+++ b/CBI/mc/Makefile
@@ -2,6 +2,8 @@ include config.mk
 include ../utils.mk
 
 
+GITHUB_REPO=https://github.com/MidnightCommander/mc
+
 ## ----------------------------------------------------------
 ## SOFTWARE
 ## ----------------------------------------------------------
@@ -17,3 +19,6 @@ post_config:
 post_install:
 	cp "$(BUILD_PATH)/config.summary" "$(PREFIX)"
 	make write_protect_install
+
+available-version:
+	@curl --silent "$(GITHUB_REPO)/tags" | pandoc --from=html --to=plain | grep -A 10 -E "^Releases Tags" | grep -E "^[[:digit:]]+[.][[:digit:]]+[.][[:digit:]]+"
