sratoolkit: Add version checks and 'make available-version'

--- a/CBI/sratoolkit/Makefile
+++ b/CBI/sratoolkit/Makefile
@@ -2,6 +2,7 @@ include config.mk
 include ../utils.mk
 
 TARBALL=$(NAME).$(VERSION)-centos_linux64.tar.gz
+FTP_HOME=https://ftp-trace.ncbi.nlm.nih.gov/sra/sdk
 
 ## ----------------------------------------------------------
 ## SOFTWARE
@@ -9,7 +10,7 @@ TARBALL=$(NAME).$(VERSION)-centos_linux64.tar.gz
 $(DOWNLOAD_TARGET):
 	mkdir -p $(BUILD_HOME)
 	cd $(BUILD_HOME); \
-	curl -L -O http://ftp-trace.ncbi.nlm.nih.gov/sra/sdk/$(VERSION)/$(TARBALL); \
+	curl -L -O $(FTP_HOME)/$(VERSION)/$(TARBALL); \
 	tar zxf $(TARBALL); \
 	mv $(NAME).$(VERSION)-centos_linux64 $(NAME)-$(VERSION)
 
@@ -19,3 +20,7 @@ $(INSTALL_TARGET): $(DOWNLOAD_TARGET)
 	make post_install
 	ls -la $(PREFIX)
 	@echo "SOFTWARE INSTALLED TO: $(PREFIX)"
+
+available-version:
+	@pattern="^[[:space:]]*([[:digit:]]+[.][[:digit:]]+([-.][[:digit:]]+)+)[/].*"; \
+	curl --silent $(FTP_HOME)/ | pandoc --from=html --to=plain | grep -E "$$pattern" | tail -1 | sed -E "s/$$pattern/\1/"
