restic: add 'make available-version'

--- a/CBI/restic/Makefile
+++ b/CBI/restic/Makefile
@@ -3,6 +3,7 @@ include ../utils.mk
 
 
 TARBALL=$(NAME)_$(VERSION)_$(ARCH).bz2
+GITHUB_REPO=https://github.com/restic/restic
 
 ## ----------------------------------------------------------
 ## SOFTWARE
@@ -10,7 +11,7 @@ TARBALL=$(NAME)_$(VERSION)_$(ARCH).bz2
 $(DOWNLOAD_TARGET):
 	mkdir -p $(BUILD_PATH); \
 	cd $(BUILD_PATH); \
-	curl -L -O https://github.com/restic/restic/releases/download/v$(VERSION)/$(TARBALL); \
+	curl -L -O $(GITHUB_REPO)/releases/download/v$(VERSION)/$(TARBALL); \
 	bunzip2 $(TARBALL)
 
 $(INSTALL_TARGET): $(DOWNLOAD_TARGET)
@@ -24,3 +25,6 @@ $(INSTALL_TARGET): $(DOWNLOAD_TARGET)
 	make post_install
 	ls -la $(PREFIX)
 	@echo "SOFTWARE INSTALLED TO: $(PREFIX)"
+
+available-version:
+	@curl --head --silent $(GITHUB_REPO)/releases/latest | grep -i -E "^location:" | sed -E 's/.*(v|\/)//'
